Shape key editing on bezier objects broken with Rendered Viewport Shading #50745

Closed
opened 2017-02-21 13:33:59 +01:00 by stephen thomas · 6 comments

System Information
macOS Sierra 10.12.1

Blender Version
Broken: 2.78 e8299c8
Worked:

Short description of error
Editing a shape key on a bezier while one of the viewports is in Rendered shading mode makes the points jump to extreme/random positions (usually the object origin).

This happens for both Blender Internal and Cycles.

Exact steps for others to reproduce the error

  • New project
  • Delete all
  • add bezier circle
  • add shape key Basis
  • add another shape key (Key 1)
  • split 3D viewport in two
  • change one viewport to Rendered shading mode
  • select Key 1 shape key
  • enter edit mode for the bezier curve
  • move/scale/rotate any/all of the points

system-info.txt

bezier-shapekey-bug.blend

**System Information** macOS Sierra 10.12.1 **Blender Version** Broken: 2.78 e8299c8 Worked: **Short description of error** Editing a shape key on a bezier while one of the viewports is in Rendered shading mode makes the points jump to extreme/random positions (usually the object origin). This happens for both Blender Internal and Cycles. **Exact steps for others to reproduce the error** - New project - Delete all - add bezier circle - add shape key Basis - add another shape key (Key 1) - split 3D viewport in two - change one viewport to Rendered shading mode - select Key 1 shape key - enter edit mode for the bezier curve - move/scale/rotate any/all of the points [system-info.txt](https://archive.blender.org/developer/F492916/system-info.txt) [bezier-shapekey-bug.blend](https://archive.blender.org/developer/F492917/bezier-shapekey-bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @stephenthomas

Added subscriber: @stephenthomas

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-02-22 12:52:28 +01:00

Confirmed, probably related to #50614, though fix for that one (6f1493f68f) does not fix issue reported here.

SKey for curves was really, really badly broken. :(

Confirmed, probably related to #50614, though fix for that one (6f1493f68f) does not fix issue reported here. SKey for curves was really, really badly broken. :(

This issue was referenced by 5e1d4714fe

This issue was referenced by 5e1d4714fef72407e3497e70ddac3f1caa959f39

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50745
No description provided.